--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/electron-load-devtool": "^1.2.1",
