--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
+    "eslint-config-next": "^12.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
@@ -38,7 +39,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "next": "latest",
+    "next": "^12.0.10",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.0",
     "typescript": "^4.0.5"
