--- a/electron-src/tsconfig.json
+++ b/electron-src/tsconfig.json
@@ -6,7 +6,10 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmit": false,
@@ -16,9 +19,17 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
+    "inlineSources": true,
+    "sourceMap": true,
     "target": "esnext",
     "outDir": "../main"
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js"
+  ]
 }
