--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-spring": "^9.4.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/electron-load-devtool": "^1.2.1",
